crates/lykn-cli/src/snapshots/lykn_cli__dist__tests__runtime_pkg_deno_json.snap
---
source: crates/lykn-cli/src/dist.rs
expression: value
---
{
  "exports": "./mod.js",
  "name": "@lykn/lang",
  "version": "0.5.0"
}
