crates/lykn-cli/src/snapshots/lykn_cli__dist__tests__runtime_pkg_package_json.snap
---
source: crates/lykn-cli/src/dist.rs
expression: value
---
{
  "author": "Duncan McGreggor",
  "dependencies": {
    "astring": "^1.9.0"
  },
  "exports": {
    ".": "./mod.js"
  },
  "files": [
    "*.js",
    "*.lykn",
    "README.md",
    "LICENSE"
  ],
  "keywords": [
    "lisp",
    "s-expression",
    "lykn"
  ],
  "license": "Apache-2.0",
  "main": "./mod.js",
  "name": "@lykn/lang",
  "repository": {
    "type": "git",
    "url": "https://github.com/oxur/lykn"
  },
  "type": "module",
  "version": "0.5.0"
}
