crates/lykn-cli/src/snapshots/lykn_cli__dist__tests__workspace_project_json.snap
---
source: crates/lykn-cli/src/dist.rs
expression: value
---
{
  "workspace": [
    "./lang",
    "./browser"
  ]
}
